--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,11 @@ body {
     sans-serif;
 }
 
+.rowA {
+  display: flex;
+  flex-direction: row;
+}
+
 a {
   color: inherit;
   text-decoration: none;
