--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,34 @@ body {
     Helvetica Neue,
     sans-serif;
 }
+.gridContainer {
+  display: grid;
+  gap: 15px;
+}
+
+.mapContainer {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.textContainer {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.inventoryContainer {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  border: 1px solid #000;
+  height: 150px;
+  max-width: 750px;
+}
 
 .rowA {
   display: flex;
@@ -57,6 +85,13 @@ footer img {
 
 footer a {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
