--- a/src/styles/MapDisplay.module.css
+++ b/src/styles/MapDisplay.module.css
@@ -15,3 +15,12 @@
   letter-spacing: 5px;
   font-family: "Courier New", monospace;
 }
+
+.highlightedX {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.usefulChar {
+  font-weight: bold;
+}
