--- a/src/styles/MapDisplay.module.css
+++ b/src/styles/MapDisplay.module.css
@@ -12,13 +12,13 @@
 .cell ul {
   padding: var(--gap);
   display: inline;
-  letter-spacing: 5px;
+  letter-spacing: 8px;
   font-family: "Courier New", monospace;
 }
 
 .highlightedX {
   font-weight: bold;
-  font-size: 1.5em;
+  letter-spacing: 4px !important;
 }
 
 .usefulChar {
