changed styling of popup to fit over map

--- a/src/styles/FightEnemy.module.css
+++ b/src/styles/FightEnemy.module.css
@@ -7,11 +7,11 @@
   padding: 20px;
   position: fixed;
   top: 9vh; /* Moved down by 9% of viewport height */
-  left: 1%; /* Left offset */
+  /* left: 1%;  Left offset */
   height: calc(
-    90vh - 9vh
+    90vh - 30vh
   ); /* 90% of viewport height minus 9% of viewport height */
-  width: 41%; /* Take 41% of the viewport width */
+  width: 32.5%; /* Take 41% of the viewport width */
   z-index: 9999;
 }
 
