--- a/src/styles/Dictionary.module.css
+++ b/src/styles/Dictionary.module.css
@@ -2,18 +2,18 @@
 
 .dictionaryButton {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 2vh;
+  right: 2vh;
   background-color: #e3e8eb;
   color: #000000;
   border: 1px solid black;
-  height: 75px;
-  width: 75px;
+  height: 9vh;
+  width: 9vh;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px;
+  padding: 1.5vh;
   cursor: pointer;
   transition:
     transform 0.3s ease,
@@ -22,7 +22,7 @@
 
 .dictionaryButton:hover {
   transform: scale(1.4);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 1vh rgba(0, 0, 0, 0.3);
 }
 
 .dictionaryButton:active {
@@ -43,9 +43,9 @@
 
 .modal {
   background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  padding: 2vh;
+  border-radius: 0.8vh;
+  box-shadow: 0 0 1vh rgba(0, 0, 0, 0.3);
   max-width: 80%;
   max-height: 80%;
   overflow-y: auto;
@@ -54,14 +54,14 @@
 
 .closeButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 1vh;
+  right: 1vh;
   background: none;
   border: none;
-  font-size: 20px;
+  font-size: 2vh;
   cursor: pointer;
 }
 
 .closeIcon {
-  font-size: 20px;
+  font-size: 2vh;
 }
