--- a/src/styles/MapDisplay.module.css
+++ b/src/styles/MapDisplay.module.css
@@ -12,11 +12,11 @@
 .cell ul {
   padding: var(--gap);
   display: inline;
-  letter-spacing: 8px;
+  letter-spacing: 0.9vh;
   font-family: "Courier New", monospace;
 }
 
 .highlightedX {
   font-weight: bold;
-  letter-spacing: 4px !important;
+  letter-spacing: 0.5vh !important;
 }
