--- a/src/styles/TextBox.module.css
+++ b/src/styles/TextBox.module.css
@@ -1,7 +1,7 @@
 /* styles for text box */
 .textBox p {
   display: "inline-flex";
-  height: 150px;
-  max-width: 750px;
+  height: 16vh;
+  max-width: 77vh;
   border: 1px solid #000;
 }
