--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@ body {
 }
 .gridContainer {
   display: grid;
-  gap: 5px;
+  gap: 0.5vh;
 }
 
 .mapContainer {
@@ -39,7 +39,7 @@ body {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
-  width: 600px;
+  width: 62vh;
 }
 
 .statsContainer {
@@ -48,8 +48,8 @@ body {
   grid-row-start: 1;
   grid-row-end: 2;
   border: 1px solid #000;
-  height: 400px;
-  max-width: 400px;
+  height: 41vh;
+  max-width: 42vh;
 }
 
 .enemyContainer {
@@ -58,8 +58,8 @@ body {
   grid-row-start: 1;
   grid-row-end: 3;
   border: 1px solid #000;
-  height: 655px;
-  max-width: 450px;
+  height: 67.5vh;
+  max-width: 47vh;
 }
 
 .inventoryContainer {
@@ -68,8 +68,8 @@ body {
   grid-row-start: 2;
   grid-row-end: 3;
   border: 1px solid #000;
-  height: 250px;
-  max-width: 400px;
+  height: 26vh;
+  max-width: 42vh;
 }
 
 .quitButton {
@@ -100,7 +100,7 @@ main {
 
 footer {
   width: 100%;
-  height: 100px;
+  height: 10vh;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
