--- a/src/styles/Classes.module.css
+++ b/src/styles/Classes.module.css
@@ -3,7 +3,10 @@
 .gridContainer {
   display: grid;
   gap: 15px;
+  grid-template-columns: 25% auto 25% auto 25%;
   grid-template-rows: 15% 20% 5% 20% 5% 20% 15%;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 #class {
