--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,8 +118,21 @@ footer a {
 }
 
 .title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  text-align: center;
+}
+
+.login {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  align-self: center;
+  justify-self: right;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 35% 30% 35%;
+  margin-left: 20px;
+  margin-right: 20px;
 }
