--- a/src/styles/TextBox.module.css
+++ b/src/styles/TextBox.module.css
@@ -1,8 +1,10 @@
 /* styles for text box */
 .textBox p {
+  white-space: pre-line;
   display: "inline-flex";
   height: 16vh;
   max-width: 77vh;
   border: 1px solid #000;
-  font-size: 1.6vh;
+  font-size: 1.8vh;
+  overflow: scroll;
 }
