--- a/src/styles/Dictionary.module.css
+++ b/src/styles/Dictionary.module.css
@@ -69,7 +69,7 @@
 .muteButton {
   position: absolute;
   top: 2vh;
-  right: 2vh;
+  left: 2vh;
   background: none;
   transform: scale(1.4);
   z-index: 999;
