--- a/src/styles/Load.module.css
+++ b/src/styles/Load.module.css
@@ -14,4 +14,16 @@
 
 .button_list li button {
   width: 200px;
+  margin-bottom: 2px;
+  display: block;
+}
+
+.selector {
+  display: flex;
+}
+
+.selector button {
+  width: 98px !important;
+  flex: 1;
+  margin-right: 2px;
 }
