--- a/src/styles/TextBox.module.css
+++ b/src/styles/TextBox.module.css
@@ -2,9 +2,13 @@
 .textBox p {
   white-space: pre-line;
   display: "inline-flex";
-  height: 16vh;
+  height: 18vh;
   max-width: 77vh;
   border: 1px solid #000;
   font-size: 1.8vh;
   overflow: scroll;
+}
+
+.button {
+  float: right;
 }
