--- a/src/styles/FightEnemy.module.css
+++ b/src/styles/FightEnemy.module.css
@@ -1,27 +1,21 @@
 /* FightEnemy.module.css */
 
 .popup {
-  /* Styles for the popup container */
   background-color: #fff;
   border: 2px solid #000;
   padding: 2vh;
   position: fixed;
-  top: 9vh; /* Moved down by 9% of viewport height */
-  left: 1%; /* Left offset */
-  height: calc(
-    90vh - 40vh
-  ); /* 90% of viewport height minus 9% of viewport height */
-  width: 32.5%; /* Take 41% of the viewport width */
-  z-index: 9999;
+  top: 20vh;
+  left: 1.8%;
+  height: 68vh;
+  width: 48%;
 }
 
 .close-button {
-  /* Styles for the close button */
   position: absolute;
   top: 1vh;
-  right: 1vh; /* Positioned to the right */
+  right: 1vh;
   background: none;
-  border: none;
   cursor: pointer;
   font-size: 20px;
   color: #000;
@@ -30,17 +24,21 @@
 }
 
 .popup h2 {
-  /* Styles for the h2 inside the popup */
   text-align: center;
   font-size: 24px;
   color: #333;
 }
 
 .popup button {
-  /* Styles for the buttons inside the popup */
+  font-size: 18px;
   margin: 0.5vh;
   padding: 1vh 2vh;
   background-color: #f0f0f0;
   border: none;
   cursor: pointer;
+}
+
+.art {
+  line-height: 0.5;
+  font-size: 1.1vh;
 }
