--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -4,21 +4,21 @@
   display: grid;
   gap: 1.5vh;
   grid-template-columns: 35% 30% 35%;
-  grid-template-rows: 50% 10% 10% 30%;
+  grid-template-rows: 50% 10% 10 10% 20%;
 }
 
 .button1 {
   grid-column-start: 2;
   grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 
 .button2 {
   grid-column-start: 2;
   grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-row-start: 5;
+  grid-row-end: 6;
 }
 
 .art {
