--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,18 @@ body {
   padding: 0 1rem;
 }
 
+.save {
+  grid-column: 1/2;
+  grid-row: 6/7;
+  padding: 0 1rem;
+}
+
+.quit {
+  grid-column: 1/2;
+  grid-row: 7/8;
+  padding: 0 1rem;
+}
+
 .textContainer {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
@@ -58,14 +70,6 @@ body {
 .inventoryContainer {
   grid-column: 2 / 3;
   grid-row: 2 / 2;
-}
-
-.quitSaveDiv {
-  margin: auto;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 4;
 }
 
 a {
